--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="#about" class="nav-link">About</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="700" data-bs-dismiss="offcanvas" ><a href="#skills" class="nav-link">Skills</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="800" data-bs-dismiss="offcanvas"><a href="#projects" class="nav-link">Projects</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas"><a href="#blogs" class="nav-link">Blogs</a></li>
+                            <!-- <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas"><a href="#blogs" class="nav-link">Blogs</a></li> -->
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas"><a href="#contact" class="nav-link">Contact</a></li>
                         </ul>
                     </div>
@@ -570,7 +570,7 @@
     </section>
 
     <!-- Blogs -->
-    <section id="blogs">
+    <!-- <section id="blogs">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Do I Write?</span></h6>
             <h2 class="section-heading text-center">My Blogs</h2>
@@ -623,7 +623,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
     <section id="contact">
